tests/ui/unknown_await.stderr
error: unknown await in workflow code; use durable APIs such as durust::call_activity!
 --> tests/ui/unknown_await.rs:6:5
  |
6 |     std::future::ready(()).await;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
